--- a/css/styles.css
+++ b/css/styles.css
@@ -138,16 +138,36 @@ ul, ol {
     text-align: center;
 }
 
-.section-title-h2 {
+.section-title-head {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
     text-transform: capitalize;
 }
 
-.team-section-h3 {
+.team-section-h {
     color: #2e2f42;
 }
 
 .team-section-p {
     font-size: 16px;
 }
+.portfolio-section-h {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
 
+.portfolio-section-p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
 /* #endregion */
